--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_succes:
   - docker push fersab89/multi-nginx
   - docker push fersab89/multi-server
   - docker push fersab89/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-west-3
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-eu-west-3-544925759874
+  bucket_path: docker-multi
+  on: 
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
